alignment fixed

--- a/src/component/sitepage5/WorkStepCard.css
+++ b/src/component/sitepage5/WorkStepCard.css
@@ -54,9 +54,4 @@
         padding-top: 0;
         font-weight: 600;
     }
-    .step-card {
-        width: 12rem;
-        height: 12rem;
-        
-    }
 }
